# moveit_setup_assistant

./: CMakeLists.txt  package.xml
src/widgets/: configuration_files_widget.cpp  configuration_files_widget.h  default_collisions_widget.h  double_list_widget.h  end_effectors_widget.h  group_edit_widget.h  kinematic_chain_widget.h  passive_joints_widget.h  planning_groups_widget.h  robot_poses_widget.h  setup_assistant_widget.h  start_screen_widget.cpp  start_screen_widget.h  virtual_joints_widget.h
templates/moveit_config_pkg_template/: package.xml.template
templates/moveit_config_pkg_template/launch/: joystick_control.launch
